Closed Bug 196235 Opened 22 years ago Closed 20 years ago

With Camino already opened, launching a second Camino app numerous times will display multiple 'Can't Launch Camino' alert dialogs

Categories

(Camino Graveyard :: General, defect, P2)

PowerPC
macOS
defect

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: chrispetersen, Assigned: sfraser_bugs)

References

Details

Build: 2003-03-04-19 Platform: Mac OS 10.2.4 Expected Results: Only open dialog should be displayed What I got: Multiple dialogs are displayed (a dialog for every time I launched the application) Steps to reproduce: 1) Have two copies of Camino 2) Launch the first copy 3) Launch the second copy multiple times 4) You should get a alert dialog for each time you have launched the second copy of Camino. 5) This can be a problem since clicking on the Quit button of this dialog can result in a crash.
Taking
Assignee: saari → sfraser
Still occurs in the 2003-08-10-02 camino NB.
WFM: 2005031508 /Applications/Camino.app/Contents/MacOS/Camino Only spawns one alert dialog... I'll reopen if others can reproduce.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → WORKSFORME
It goes like this: 1. have camino running 2. launch another copy of camino; it puts up the dialog 3. click on the dock icon of that new cope. For every click, it puts up a new dialog.
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
Status: REOPENED → ASSIGNED
Priority: -- → P2
Target Milestone: --- → Camino0.9
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago20 years ago
Resolution: --- → FIXED
*** Bug 271624 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.