Fix bug 196235: if a copy of Camino is already running, clicking on the Dock icon of the second copy will put a dialog for each click. Fixed by checking for an existing prefs manager.