camino/src/preferences/PreferenceManager.h
@@ -54,6 +54,7 @@ class nsIPref;
 }
 
 + (PreferenceManager *)sharedInstance;
++ (PreferenceManager *)sharedInstanceDontCreate;
 
 - (id) init;
 - (void) dealloc;
